[gd_scene load_steps=3 format=3 uid="uid://u1q38ecdmws8"]

[ext_resource type="Script" uid="uid://d33exekcsupic" path="res://ui/menus/main_menu.gd" id="1_5oih7"]
[ext_resource type="PackedScene" uid="uid://cmdqgqfevkvly" path="res://ui/menus/guide_screen.tscn" id="2_qc8qn"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_5oih7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.5
offset_top = -15.5
offset_right = 134.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Turtle Plunge"

[node name="LevelContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="GuideScreen" parent="." instance=ExtResource("2_qc8qn")]
